--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <span class="close-btn" onclick="togglePanel()">&times;</span>
         <img id="header-photo" src="photos/2.jpeg" alt="Мое фото" class="header-photo">
         <h3>Abdykerimov Elburs</h3>
-        <p><a href="CVelbyrs.html" style="color: rgb(45, 113, 153); text-decoration: none;" >Front End, Game Developer</a> in Kyrgyzstan.</p>
+        <p><a href="index.html" style="color: rgb(45, 113, 153); text-decoration: none;" >Front End, Game Developer</a> in Kyrgyzstan.</p>
         
         <div class="none">
             <nav class="menu">
