--- a/index.html
+++ b/index.html
@@ -51,11 +51,8 @@
 
         <div>
             <section id="about">
-                <h4><P style="color: black;">Hello, my name is Abdykerimov Elburs.</P> I am HTML CSS
-                    Front End Developer, sometimes I create 2D and 3D games in the Unity Game Engine, I do design, website development.
-                    Personal qualities: dedication, sociability, punctuality,
-                    hard work, responsible attitude to the assigned task.
-                    I have a great desire to work and develop professionally.</h2>
+                <h4><P style="color: black;">Hello, my name is Abdykerimov Elburs.</P> Hello, my name is Abdykerimov Elburs. I am a Front-End Developer specializing in HTML and CSS, and I occasionally create 2D and 3D games using the Unity Game Engine. My skills also include web design and development.
+I am dedicated, sociable, punctual, and hardworking, with a strong sense of responsibility toward every task. I am highly motivated to work and continuously develop my professional skills..</h2>
             </section>
             <section>
 
