--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -15,7 +14,7 @@
         <section id="home">
         <div class="photo-container">
             <img id="header-photo" src="photos/2.jpeg" alt="Мое фото" class="header-photo">
-            <button id="resume-button" onclick="openResume()">
+            <button id="resume-button" onclick="1()">
                 <i class="fas fa-download"></i>DOWNLOAD CV
             </button>
         </section>
